<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.profile.rohail.rohailprofile.activities.ContactActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/contact_details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/email_icon" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:autoLink="all"
                android:text="@string/email_address"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_icon" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:autoLink="all"
                android:text="@string/phone_number"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_name" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/location"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_linkedin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/linkedin_icon" />

            <TextView
                android:id="@+id/tv_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:autoLink="all"
                android:text="@string/linkedin"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
